........S. [ZBXNEXT-2279] zabbix[proxy,,lastaccess] will be always performed by server (Sasha)
A.F.....S. [ZBXNEXT-1133] added support for custom expressions in action conditions (Krists)
...G...... [ZBXNEXT-1300] added low-level discovery support for enumerating CPUs on all supported platforms (Juris)
A......... [ZBX-8459] made possible CORS AJAX requests for JSON API (Andrejs)

Bug fixes:
..F....... [ZBX-2570] fixed dashboard widgets showing error messages about expired/broken session (Krists)
A......... [ZBX-8428] fixed item.get API call to return values for "lastvalue", "lastclock", "lastns", "prevvalue" only for last 24 hours (Krists)
..F....... [ZBX-8468] removed unnecessary "empty" buttons in map element popups (Andrejs)
..F....... [ZBX-8431] added context for text string 'Name' (Oleg)
..F....... [ZBX-8467] removed "make_latest_issues" function extra argument (Oleg)
..F....... [ZBX-8436] fixed page layout being broken with IE8 in cases when item rows are added or removed (Krists)
..F....... [ZBX-8286] fixed undefined index when enabling or disabling hosts in a host group (Krists)
.......PS. [ZBX-8037] added informative log message about Zabbix not upgrading SQLite3 databases (Juris)
..F....... [ZBX-8425] fixed "Host status" widget displaying problematic host if one of its groups is set to hidden in dashboard filter (Ivo)

--------------------------------------------------------------------------------
Changes for 2.3.2

New features:
A.F....PS. [ZBXNEXT-2301] added a way to disable SNMP bulk operations per interface (Oleg, asaveljevs)
..F....... [ZBX-2603] added validation while working with regular expressions (Andrejs)
..F....... [ZBX-8278] prepared frontend for mbstring.internal_encoding ini option deprecation in php 5.6+ (Andrejs)
..F....... [ZBXNEXT-2222] added trigger status filter to the trigger overview page (Sasha)
..F....... [ZBX-8339] removed auto login/logout controls while editing guest user (Andrejs)